[project]
name = "radar-mapping-api"
version = "0.1.0"
description = "A Python client for the Radar.io geocoding, mapping, and geolocation API"
keywords = ["radar", "geocoding", "geolocation", "mapping", "reverse-geocoding", "places"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
    "tenacity>=9.1.2",
]
authors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]
urls = { "Repository" = "https://github.com/iloveitaly/radar-mapping-api" }

[project.optional-dependencies]
sentry = ["sentry-sdk>=2.0.0"]

# additional packaging information: https://packaging.python.org/en/latest/specifications/core-metadata/#license

[build-system]
requires = ["uv_build>=0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# avoids the src/ directory structure
module-root = ""

dev = [
    "pytest>=8.3.4",
    "pyright[nodejs]>=1.1.408",
    "ruff>=0.15.0",
    "respx>=0.22.0",
    "coverage>=7.13.4",
    "pytest-cov>=7.0.0",
    "covdefaults>=2.3.0",
]

[tool.pyright]
exclude = ["examples/", "playground/", "tmp/", ".venv/", "tests/"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing --cov-report=html:tmp/htmlcov"

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["radar_mapping_api"]

[tool.coverage.report]
fail_under = 50

[tool.ruff]
extend-exclude = ["playground.py", "playground/"]
